--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "browserify" : "14.4.0",
     "coffeeify" : "2.1.0",
     "less" : "2.7.2"
+  },
+  "scripts" : {
+    "test" : "echo website"
   }
 }
