--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js: "7"
 
 deploy:
     provider: script
-    script: deploy.sh
+    script: sh deploy.sh
     skip_cleanup: true
     on:
         tags: true
