--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "less" : "2.7.2",
     "pug" : "2.0.0-rc.2"
   },
+  "dependencies" : {
+    "font-awesome" : "4.7.0"
+  },
   "scripts" : {
     "test" : "echo website"
   }
