--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 deploy:
   provider: gcs
-  access_key_id: "GCS Interoperable Access Key ID"
-  secret_access_key: "GCS Interoperable Access Secret"
+  access_key_id: ${GCS_ID}
+  secret_access_key: ${GCS_KEY}
   bucket: tutor-events
   skip_cleanup: true
   acl: public-read
