--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "name" : "107highscrev",
-  "description" : "107highscrev",
-  "author" : "hotdog929 <hotdog929@gmail.com>",
-  "version" : "1.0.3",
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/eHanlin/107highscrev.git"
+  "name": "107highscrev",
+  "description": "107highscrev",
+  "author": "hotdog929 <hotdog929@gmail.com>",
+  "version": "1.0.3",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eHanlin/107highscrev.git"
   },
-  "devDependencies" : {
-    "jquery" : "3.2.1",
-    "gulp" : "3.9.1",
-    "gulp-rename" : "1.2.2",
-    "gulp-template-util" : "0.0.2",
-    "event-stream" : "3.3.4",
-    "del" : "2.2.2",
-    "q" : "1.5.0",
-    "path" : "0.12.7",
-    "browserify" : "14.4.0",
-    "coffeeify" : "2.1.0",
-    "less" : "2.7.2",
-    "pug" : "2.0.0-rc.2"
+  "devDependencies": {
+    "jquery": "3.2.1",
+    "gulp": "3.9.1",
+    "gulp-rename": "1.2.2",
+    "gulp-template-util": "0.0.2",
+    "event-stream": "3.3.4",
+    "del": "2.2.2",
+    "q": "1.5.0",
+    "path": "0.12.7",
+    "browserify": "14.4.0",
+    "coffeeify": "2.1.0",
+    "less": "2.7.2",
+    "pug": "2.0.0-rc.2"
   },
-  "dependencies" : {
-    "font-awesome" : "4.7.0"
+  "dependencies": {
+    "font-awesome": "4.7.0",
+    "gulp-gcloud-publish": "^2.1.1"
   },
-  "scripts" : {
-    "test" : "echo website"
+  "scripts": {
+    "test": "echo website"
   }
 }
